2008-10-10  Marius Vollmer  <marius.vollmer@nokia.com>

	Make apt-worker more robust at detecting when a operation would
	leave broken packages behind.

	* src/apt-worker.cc (any_newly_broken): New.
	* src/apt-worker.cc (cmd_get_package_info): Use it instead of
	looking at just the number of broken packages.
	* src/apt-worker.cc (mark_for_install_1): Allow broken packages to
	be installed again.
	* src/apt-worker.cc (cmd_get_package_list): Also flag NowBroken
	packages as broken.
	* src/details.cc (spd_create_summary_page): List all package
	operations for broken packages.

	Make red-pill mode non-permanent by default.

	* src/menu.cc, src/menu.h (set_settings_menu_visible): New, to
	make the Settings menu visible immediatly when the red-pill mode
	is activated.
	* src/repo.cc (pill_response): Call it.
	* src/settings.cc (red_pill_permanent): New settings.
	* src/settings.cc (load_settings): Set red_pill_mode to false
	unless it is permanent.

2008-10-10  Victor Manuel Jaquez Leal  <vjaquez@maemo.org>

	* src/operations.cc: (ip_download_cur_reply) if the download is
	cancelled the cache directories are cleaned. (NB#8988 - 'Not
	enough memory' error note shown while downloading in mentioned
	scenario)

2008-10-06  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/settings.cc: Disable red_pill_show_all and
	red_pill_show_magic_sys by default, to better keep people out of
	trouble.

2008-08-22  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/package-info-cell-renderer.c: Use gtk_paint_layout instead
	of pango_cairo_show_layout to get the theming right.

2008-08-22  Victor Manuel Jaquez Leal  <vjaquez@maemo.org>

	* src/package-info-cell-renderer.c
	(package_info_cell_renderer_render):
	Honor the theme color properties in the cell widget (M3503)

2008-07-16  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc: Use get_display_version instead of
	available_version in all the right places.

2008-07-15  Marius Vollmer  <marius.vollmer@nokia.com>
